<?xml version="1.0"?>
<package format="2">
  <name>tf2_eigen</name>
  <version>0.33.2</version>
  <description>tf2_eigen</description>

  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez Cordero</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD</license>

  <author>Koji Terada</author>
  <author email="tfoote@osrfoundation.org">Tully Foote</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>

  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_export_depend>eigen</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
