<?xml version="1.0"?>
<package format="2">
  <name>tf2_eigen_kdl</name>
  <version>0.33.2</version>
  <description>

     Conversion functions between:
      - Eigen and KDL

  </description>

  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez Cordero</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD</license>

  <author>Adam Leeper</author>
  <author>Stuart Glaser</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>

  <depend>orocos_kdl_vendor</depend>
  <depend>tf2</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
