<package format="2">
  <name>tf2_geometry_msgs</name>
  <version>0.10.0</version>
  <description>
    tf2_geometry_msgs
  </description>
  <author>Wim Meeussen</author>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/tf2_ros</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>orocos_kdl</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- python support not yet ported
  <build_depend>python_orocos_kdl</build_depend>

  <exec_depend>python_orocos_kdl</exec_depend>
  -->

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
