<package format="2">
  <name>tf2_geometry_msgs</name>
  <version>0.13.12</version>
  <description>
    tf2_geometry_msgs
  </description>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>
  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez Cordero</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/tf2_ros</url>
  <author email="tfoote@osrfoundation.org">Tully Foote</author>
  <author>Wim Meeussen</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>orocos_kdl</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- python support not yet ported
  <build_depend>python_orocos_kdl</build_depend>

  <exec_depend>python_orocos_kdl</exec_depend>
  -->

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>rclcpp</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
