<package format="2">
  <name>tf2_geometry_msgs</name>
  <version>0.33.2</version>
  <description>
    tf2_geometry_msgs
  </description>

  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez Cordero</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/tf2_ros</url>

  <author email="tfoote@osrfoundation.org">Tully Foote</author>
  <author>Wim Meeussen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>python_cmake_module</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>orocos_kdl_vendor</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rclcpp</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
