<package format="2">
  <name>tf2_kdl</name>
  <version>0.11.5</version>
  <description>
    KDL binding for tf2
  </description>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <author>Wim Meeussen</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/tf2</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>orocos_kdl</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>tf2_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
