<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf2_msgs</name>
  <version>0.13.0</version>
  <description>
    tf2_msgs
  </description>
  <author>Eitan Marder-Eppstein</author>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/tf2_msgs</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <ros1_bridge mapping_rules="tfmessage_bridge_mapping_rule.yaml" />
  </export>

</package>
