<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>tf2_py</name>
  <version>0.5.15</version>
  <description>The tf2_py package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">http://ros.org/wiki/tf2_py</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <build_type>ament_python</build_type>
  </export>
</package>
